--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
+    "node-sass": "^4.9.4",
+    "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -44,7 +46,9 @@
       "no-console": "off",
       "no-param-reassign": [
         "error",
-        { "props": false }
+        {
+          "props": false
+        }
       ],
       "quotes": [
         "error",
